# openai-realtime-proxy

./: Cargo.toml  README.md
examples/: server.rs
src/: lib.rs
